--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/primary_color"
+    android:paddingTop="@dimen/padding_super"
+    android:paddingHorizontal="@dimen/padding_medium"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="381dp"
+        android:layout_height="345dp"
+        android:src="@drawable/group_food"
+        android:scaleType="centerCrop"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/padding_super"/>
+
+    <TextView
+        android:gravity="center"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:letterSpacing="0.05"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Enjoy"
+        android:textColor="@color/white"/>
+
+    <TextView
+        android:gravity="center"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:letterSpacing="0.05"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/YourFood"
+        android:textColor="@color/white"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/padding_super"/>
+
+    <Button
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_width="241dp"
+        android:layout_height="64dp"
+        android:text="@string/GetStarted"
+        android:textAllCaps="false"
+        android:background="@drawable/button_border_radius"
+        android:textColor="@color/black"/>
+    
+</LinearLayout>
