--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="381dp"
+        android:layout_width="380dp"
         android:layout_height="345dp"
         android:src="@drawable/group_food"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerInside"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -21,34 +21,32 @@
 
     <TextView
         android:gravity="center"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:letterSpacing="0.05"
+        android:textAppearance="@style/BoldText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Enjoy"
-        android:textColor="@color/white"/>
+        android:text="@string/Enjoy"/>
 
     <TextView
         android:gravity="center"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:letterSpacing="0.05"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/YourFood"
-        android:textColor="@color/white"/>
+        android:textAppearance="@style/BoldText"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/padding_super"/>
 
     <Button
+        android:id="@+id/btnStarted"
         android:layout_gravity="center"
         android:gravity="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_width="241dp"
         android:layout_height="64dp"
         android:text="@string/GetStarted"
+        android:textAppearance="@style/ThinText"
         android:textAllCaps="false"
         android:background="@drawable/button_border_radius"
         android:textColor="@color/black"/>
