--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="padding_small">8dp</dimen>
+    <dimen name="padding_small_l">15dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
+    <dimen name="padding_medium_l">25dp</dimen>
     <dimen name="padding_large">32dp</dimen>
     <dimen name="padding_super">60dp</dimen>
     <dimen name="margin_100">100dp</dimen>
