--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,12 @@
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 
+    <style name="BoldTextSmall">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
     <style name="BoldText">
         <item name="android:textSize">36sp</item>
         <item name="android:textStyle">bold</item>
@@ -40,8 +46,21 @@
 
     <style name="CategoryText">
         <item name="android:textSize">28sp</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="PopularItemText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
+    <style name="MoneyText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/money_color</item>
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 </resources>
