--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -341,18 +341,18 @@
                             android:orientation="horizontal">
 
                             <LinearLayout
-                                android:layout_width="152dp"
-                                android:layout_height="220dp"
+                                android:layout_width="@dimen/width_box_popular"
+                                android:layout_height="@dimen/height_box_popular"
                                 android:orientation="vertical"
                                 android:gravity="center"
-                                android:layout_marginRight="20dp"
-                                android:paddingHorizontal="12dp"
+                                android:layout_marginRight="@dimen/margin_20dp"
+                                android:paddingHorizontal="@dimen/padding_12dp"
                                 android:background="@drawable/popular_border_radius_items">
 
                                 <ImageButton
                                     android:id="@+id/btnBurger"
-                                    android:layout_width="130dp"
-                                    android:layout_height="99dp"
+                                    android:layout_width="@dimen/width_image_box_popular"
+                                    android:layout_height="@dimen/height_image_box_popular"
                                     android:src="@drawable/beef_burger_big"
                                     android:background="@color/box_popular_color"
                                     android:scaleType="centerCrop"/>
@@ -363,7 +363,7 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:layout_height="26dp"
+                                    android:layout_height="@dimen/height_textview_box_popular"
                                     android:gravity="center"
                                     android:text="@string/BeefBurger"
                                     style="@style/PopularItemText"/>
@@ -374,7 +374,7 @@
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="23dp">
+                                    android:layout_height="@dimen/width_height_23dp">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -385,8 +385,8 @@
                                         tools:ignore="MissingConstraints" />
 
                                     <ImageView
-                                        android:layout_width="16dp"
-                                        android:layout_height="16dp"
+                                        android:layout_width="@dimen/width_height_16dp"
+                                        android:layout_height="@dimen/width_height_16dp"
                                         android:src="@drawable/add"
                                         app:layout_constraintRight_toRightOf="parent"
                                         app:layout_constraintBottom_toBottomOf="parent"
@@ -397,18 +397,18 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="152dp"
-                                android:layout_height="220dp"
-                                android:layout_marginRight="20dp"
+                                android:layout_width="@dimen/width_image_box_popular"
+                                android:layout_height="@dimen/height_box_popular"
+                                android:layout_marginRight="@dimen/margin_20dp"
                                 android:orientation="vertical"
                                 android:gravity="center"
-                                android:paddingHorizontal="12dp"
+                                android:paddingHorizontal="@dimen/padding_12dp"
                                 android:background="@drawable/popular_border_radius_items">
 
                                 <ImageButton
                                     android:id="@+id/btnCheese"
-                                    android:layout_width="130dp"
-                                    android:layout_height="99dp"
+                                    android:layout_width="@dimen/width_image_box_popular"
+                                    android:layout_height="@dimen/height_image_box_popular"
                                     android:src="@drawable/pizza_big"
                                     android:background="@color/box_popular_color"
                                     android:scaleType="centerInside"/>
@@ -419,7 +419,7 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:layout_height="26dp"
+                                    android:layout_height="@dimen/height_textview_box_popular"
                                     android:gravity="center"
                                     android:text="@string/CheesePizza"
                                     style="@style/PopularItemText"/>
@@ -430,7 +430,7 @@
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="23dp">
+                                    android:layout_height="@dimen/width_height_23dp">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -441,8 +441,8 @@
                                         tools:ignore="MissingConstraints" />
 
                                     <ImageView
-                                        android:layout_width="16dp"
-                                        android:layout_height="16dp"
+                                        android:layout_width="@dimen/width_height_16dp"
+                                        android:layout_height="@dimen/width_height_16dp"
                                         android:src="@drawable/add"
                                         app:layout_constraintRight_toRightOf="parent"
                                         app:layout_constraintBottom_toBottomOf="parent"
@@ -453,18 +453,18 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="152dp"
-                                android:layout_height="220dp"
-                                android:layout_marginRight="20dp"
+                                android:layout_width="@dimen/width_box_popular"
+                                android:layout_height="@dimen/height_box_popular"
+                                android:layout_marginRight="@dimen/margin_20dp"
                                 android:orientation="vertical"
                                 android:gravity="center"
-                                android:paddingHorizontal="12dp"
+                                android:paddingHorizontal="@dimen/padding_12dp"
                                 android:background="@drawable/popular_border_radius_items">
 
                                 <ImageButton
                                     android:id="@+id/btnCheeses"
-                                    android:layout_width="130dp"
-                                    android:layout_height="99dp"
+                                    android:layout_width="@dimen/width_image_box_popular"
+                                    android:layout_height="@dimen/height_image_box_popular"
                                     android:src="@drawable/beef_burger_big"
                                     android:background="@color/box_popular_color"
                                     android:scaleType="centerCrop"/>
@@ -475,7 +475,7 @@
 
                                 <TextView
                                     android:layout_width="wrap_content"
-                                    android:layout_height="26dp"
+                                    android:layout_height="@dimen/height_textview_box_popular"
                                     android:gravity="center"
                                     android:text="@string/BeefBurger"
                                     style="@style/PopularItemText"/>
@@ -486,7 +486,7 @@
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="23dp">
+                                    android:layout_height="@dimen/width_height_23dp">
 
                                     <TextView
                                         android:layout_width="wrap_content"
@@ -497,8 +497,8 @@
                                         tools:ignore="MissingConstraints" />
 
                                     <ImageView
-                                        android:layout_width="16dp"
-                                        android:layout_height="16dp"
+                                        android:layout_width="@dimen/width_height_16dp"
+                                        android:layout_height="@dimen/width_height_16dp"
                                         android:src="@drawable/add"
                                         app:layout_constraintRight_toRightOf="parent"
                                         app:layout_constraintBottom_toBottomOf="parent"
