--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,20 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="FoodNameDetailTextThin">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">sans-serif-thin</item>
+    </style>
+
+    <style name="FoodDetailTextThin">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/food_detail</item>
+        <item name="fontFamily">sans-serif-thin</item>
+    </style>
+
     <style name="PopularItemText">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
@@ -63,4 +77,25 @@
         <item name="android:textColor">@color/money_color</item>
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
+
+    <style name="MoneyTextMedium">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/money_color</item>
+    </style>
+
+    <style name="RateText">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="TextOfButton">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
+
 </resources>
