--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,14 @@
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 
+    <style name="FoodNameCart">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
     <style name="CategoryText">
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
@@ -69,6 +77,18 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
+    <style name="PopularItemText24">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="MoneyCart">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/money_color</item>
     </style>
 
     <style name="MoneyText">
@@ -97,5 +117,13 @@
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
 
+    <style name="WhiteButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/white</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 </resources>
