--- a/app/src/main/res/layout/box_food_cart_fragment.xml
+++ b/app/src/main/res/layout/box_food_cart_fragment.xml
@@ -4,7 +4,8 @@
     android:layout_width="@dimen/width_box_food_cart"
     android:layout_height="@dimen/height_box_food_cart"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginBottom="10dp">
 
     <LinearLayout
         android:layout_width="120dp"
