--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="padding_medium_l">25dp</dimen>
     <dimen name="padding_large">32dp</dimen>
+    <dimen name="padding_large_l">50dp</dimen>
     <dimen name="padding_super">60dp</dimen>
     <dimen name="margin_100">100dp</dimen>
     <dimen name="width_box_popular">152dp</dimen>
