--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -139,6 +139,7 @@
             android:text="@string/Password"/>
 
         <TextView
+            android:id="@+id/txtForgotPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="180dp"
@@ -156,6 +157,7 @@
             android:id="@+id/edtPassword"
             android:layout_width="356dp"
             android:layout_height="35dp"
+            android:inputType="textPassword"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:paddingLeft="@dimen/padding_medium"
